8/25/2004   version 0.2 pre21   Ian Lewis <IanLewis@member.fsf.org>

    * The serializer now ignores the element-content-whitespace parameter since
      the parameter only makes sense when the document is validated by DTD or
      Schema that specifies that an element MUST have only child elements
      (element-content). Also if the DOM validates this info when being edited
      then the serializer could never write out whitespace in element content
      without invalidating the document. See
      http://xml.apache.org/xerces2-j/javadocs/dom3-api/index.html Section 2.10
    * Removed the whitespace in element content checkbox from the options since
      it's ignored
    * Removed the show whitespace only nodes check box since showing
      whitespace only nodes in conjunction with formatting options makes
      synchronization between options and the document difficult.
    * Made the DocumentBuffer class extend XMLDocument so that there is one
      class that deals with the document as a data model.

8/19/2004   version 0.2 pre20   Ian Lewis <IanLewis@member.fsf.org>

    * Fixed bug where the file is kept open by a reader or something too long.
      This didn't allow other editors to open the document until jsXe is
      closed or the objects are garbage collected.

8/18/2004   version 0.2 pre19   Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug with reloading a document in the source view.
    * Fixed a bug that caused a document to be loaded dirty because the fact
      that it was dirty was saved to the recent files list
    * Added ability to create and edit processing instruction nodes

8/12/2004   version 0.2 pre18   Ian Lewis <IanLewis@member.fsf.org>

    * The OptionsPanel now extends the EnhancedDialog class. This makes it so
      the Options dialog responds to the escape and enter keys.
    * Fixed bug where when documents are opened but not viewed the split pane